--- a/PS1_Started.Rmd
+++ b/PS1_Started.Rmd
@@ -9,11 +9,11 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-**Group Member 1: Your name here**
+**Group Member 1: Liam**
 
-**Group Member 2: Your name here**
+**Group Member 2: James**
 
-**Group Member 3: Your name here**
+**Group Member 3: Jiayue**
 
 
 
@@ -424,6 +424,10 @@ out$Y<-out$V1*B1+out$V2*B2+out$error
 **Question: Write a chunk in which you regress $Y$ on $V_1$ and $V_2$. Are your estimates of $\beta_1$ and $\beta_2$ biased?**
 
 **Code:**
+```{r}
+model <- lm(Y ~ V1 + V2, data = out)
+summary(model)
+```
 
 **Answer:**
 
@@ -433,6 +437,11 @@ out$Y<-out$V1*B1+out$V2*B2+out$error
 **Question: Write a chunk in which you regress $Y$ on $V_1$ only. Is your estimates of $\beta_1$ biased?**
 
 **Code:**
+```{r}
+model_v1 <- lm(Y ~ V1, data = out)
+summary(model_v1)
+
+```
 
 **Answer:**
 
@@ -441,6 +450,11 @@ out$Y<-out$V1*B1+out$V2*B2+out$error
 **Question: Generate a new variable $Y_{adj}$ such that $Y_{adj}=Y-\beta_2*V_2$. Then regress $Y_{adj}$ on $V_1$. Is your estimate of $\beta_1$ biased? Can you explain why/why not?**
 
 **Code:**
+```{r}
+out$Y_adj <- out$Y - B2 * out$V2
+model_adj <- lm(Y_adj ~ V1, data = out)
+summary(model_adj)
+```
 
 **Answer:**
 
@@ -451,13 +465,13 @@ out$Y<-out$V1*B1+out$V2*B2+out$error
 **Code:**
 
 ```{r key 4}
-#plotted<-ggplot(out, aes(V1, y = value, color = variable)) + 
-#    geom_point(aes(y = Y, col = "Y")) + 
-#    geom_point(aes(y = adjY, col = "adjY"))+
-#    geom_smooth(method='lm', aes(y = Y, col = "Y"))+
-#    geom_smooth(method='lm', aes(y = adjY, col = "adjY"))
+plotted<-ggplot(out, aes(V1, y = value, color = variable)) + 
+    geom_point(aes(y = Y, col = "Y")) + 
+    geom_point(aes(y = adjY, col = "adjY"))+
+    geom_smooth(method='lm', aes(y = Y, col = "Y"))+
+    geom_smooth(method='lm', aes(y = adjY, col = "adjY"))
 
-#plotted
+plotted
 
 
 ```
